--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
             </div>
           </div>
           <div id="links_container">
+            <a href="https://twitter.com/PrianshuMaurya" target="_blank" class="light-mode-a ubuntu">X</a>
             <a href="https://github.com/PriyansuMaurya" target="_blank" class="light-mode-a ubuntu">GitHub</a>
             <a href="https://www.linkedin.com/in/priyanshu-maurya/" target="_blank" class="light-mode-a ubuntu">LinkedIn</a>
-            <a href="https://twitter.com/PrianshuMaurya" target="_blank" class="light-mode-a ubuntu">Twitter</a>
+            <a href="./Priyanshu_Maurya_Resume_01_08_2023.pdf" target="_blank" class="light-mode-a ubuntu">Resume (PDF)</a>
             <a href="https://www.instagram.com/knownpriyanshu/" target="_blank" class="light-mode-a ubuntu">Instagram</a>
             <a href="https://priyansu.vercel.app/" target="_blank" class="light-mode-a ubuntu">Portfolio</a>
+            <!-- <a href="https://priyansu.vercel.app/" target="_blank" class="light-mode-a ubuntu">Schedule a meet</a> -->
           </div>
           <img src="divider_light.svg" alt="divider with diagonal lines" id="divider-pic">
           <div id="footer-container">
@@ -40,7 +42,6 @@
                 <span class="slider round" id="slider-circle"></span>
               </label>
               <i class="fa-solid fa-moon"></i>
-
             </div>
           </div>
         </div>
