Added medium blog url
- Added tab icon
- structured all files

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
         <meta name="description" content="Priyanshu's linktree containing all relevant social media and online accounts">
         <meta name="keywords" content="Github, Twitter, Instagram, LinkedIn">
         <meta name="author" content="Priyanshu Maurya">
+        <link href="public/linktree.png" rel="icon" type="image/gif">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gudea&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-        <script src="index.js"></script>
+        <script src="javascript/index.js"></script>
         <script src="https://kit.fontawesome.com/94032701a9.js" crossorigin="anonymous"></script>
     </head>
     <body class="light-mode-body">
         <div id="flex_container">
           <div id="face-name-card">
  
-            <img src="profile_pic.jpg" alt="Picture of Priyanshu Smiling" id="profile-pic" />
+            <img src="public/profile_pic.jpg" alt="Picture of Priyanshu Smiling" id="profile-pic" />
             <div>
               <h1 class="ubuntu">Priyanshu <br> Maurya</h1>
               <h3 class="gudea">Software Developer</h3>
@@ -27,12 +28,14 @@
             <a href="https://twitter.com/PrianshuMaurya" target="_blank" class="light-mode-a ubuntu">X</a>
             <a href="https://github.com/PriyansuMaurya" target="_blank" class="light-mode-a ubuntu">GitHub</a>
             <a href="https://www.linkedin.com/in/priyanshu-maurya/" target="_blank" class="light-mode-a ubuntu">LinkedIn</a>
-            <a href="./Priyanshu_Maurya_Resume_01_08_2023.pdf" target="_blank" class="light-mode-a ubuntu">Resume (PDF)</a>
+            <a href="./public/Priyanshu_Maurya_Resume_01_08_2023.pdf" target="_blank" class="light-mode-a ubuntu">Resume (PDF)</a>
+            <a href="https://priyansu-maurya.medium.com/" target="_blank" class="light-mode-a ubuntu">Blogs</a>
             <a href="https://www.instagram.com/knownpriyanshu/" target="_blank" class="light-mode-a ubuntu">Instagram</a>
             <a href="https://priyansu.vercel.app/" target="_blank" class="light-mode-a ubuntu">Portfolio</a>
+            
             <!-- <a href="https://priyansu.vercel.app/" target="_blank" class="light-mode-a ubuntu">Schedule a meet</a> -->
           </div>
-          <img src="divider_light.svg" alt="divider with diagonal lines" id="divider-pic">
+          <img src="public/divider_light.svg" alt="divider with diagonal lines" id="divider-pic">
           <div id="footer-container">
             <h4 class="ubuntu">Crafted with ❤️ by Priyanshu ✨</h4>
             <div id="mode-container">
